# GH-ICP

./: BinaryFeatureExtraction.cpp  BinaryFeatureExtraction.h  CMakeLists.txt  KM.cpp  KM.h  MCMF.cpp  PCA.h  ParameterList.txt  README.md  Registration.cpp  Registration.h  StereoBinaryFeature.cpp  dataIo.cpp  dataIo.h  dataio.h  fpfh.cpp  fpfh.h  keypointDetection.cpp  keypointDetection.h  main.cpp  paralist.txt  paralist_building.txt  paralist_example.txt  paralist_exmaple.txt  pointCloudRegistration.vcxproj  pointCloudRegistration.vcxproj.filters  principleComponentAnalysis.cpp  principleComponentAnalysis.h  sample_pattern.txt  utility.h  voxelFilter.h
config/: ParameterList-Example.txt
include/: BinaryFeatureExtraction.hpp  KM.h  PCA.h  Registration.h  StereoBinaryFeature.h  binary_feature_extraction.hpp  cloud_viewer.hpp  common_reg.h  dataio.h  dataio.hpp  filter.h  filter.hpp  fpfh.h  fpfh.hpp  ghicp_reg.h  keypointdetect.hpp  km.h  pca.h  registration.h  utility.h  voxelFilter.h
script/: run.sh
src/: BinaryFeatureExtraction.cpp  BinaryFeatureExtraction.h  StereoBinaryFeature.cpp  common_reg.cpp  dataio.cpp  filter.cpp  ghicp_reg.cpp  km.cpp  registration.cpp  stereo_binary_feature.cpp
test/: ghicp_main.cpp  ghicp_reg.cpp
